# Hera

./: .gitignore  CMakeLists.txt
CMake/: platform.cmake
Hera/: CMakeLists.txt
Hera-024/: CMakeLists.txt
Hera-024/Source/: SimpleSynthNoiseTutorial_01.h  SimpleSynthNoiseTutorial_02.h  SimpleSynthNoiseTutorial_03.h
Hera/Source/: Editor.cpp  Editor.hpp  Integrator.hpp  Main.cpp  MainComponent.cpp  MainComponent.hpp  Parameters.h  Processor.cpp  Processor.hpp  StereoIntegrator.hpp
Hera/Source/Gui/: Editor.cpp  Editor.hpp
Hera/Source/Synth/: AudioSource.cpp  AudioSource.hpp  Oscillator.hpp  SineSound.hpp  SineVoice.cpp  SineVoice.hpp  SynthAudioSource.cpp  SynthAudioSource.hpp  Voice.cpp  Voice.hpp
cmake/: CPM.cmake
